@@ -11,6 +11,7 @@
 - Update locals (zhTW, ptBR)
 - Update Aura Indicator for raidframes
 - Added enemy buffs on targetframe
+- Added itemborder for professionbags
 
 0.9.1
 
